--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = cs371 
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = justinblaber
+description = cs371
+keywords = cs371
+author = Justin Blaber
+author_email = justin.akira.blaber@gmail.com
+copyright = Justin Blaber
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
@@ -39,9 +39,6 @@ status = 2
 # Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
 nbs_path = .
 doc_path = docs
-
-# Whether to look for library notebooks recursively in the `nbs_path` dir
-recursive = False
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
 doc_host =  https://%(user)s.github.io
